2005-03-08  Hans-Peter Nilsson  <hp@axis.com>

	Adjust testsuite for cris-axis-aout.
	* gas/cris/rd-bcnst.d, gas/cris/rd-usp-1.d: Adjust regexps for a.out output.
	* gas/cris/mulbug-err-1.s, gas/cris/rd-arch-1.d,
	gas/cris/rd-arch-2.d, gas/cris/rd-arch-3.d, gas/cris/rd-break32.d,
	gas/cris/rd-pcrel2.d, gas/cris/rd-ppv1032.d, gas/cris/rd-ppv32.d,
	gas/cris/rd-usp-1b.d, gas/cris/v32-err-7.s: Pass --em=criself.

2005-03-04  David Daney  <ddaney@avtrex.com>

	* gas/mips/elf-rel23b.d: Use '__gnu_local_gp' instead of '_gp'
	for -mno-shared optimization.
	* gas/mips/elf-rel25a.d: Ditto.

2005-03-04  Nick Clifton  <nickc@redhat.com>

	* gas/arm/arm.exp: Fix test for running the "undefined" to catch
	more non-ELF cases.
	* gas/arm/pic.d: Fix for vxworks target.
	* gas/arm/basic.d: Likewise.
	* gas/arm/unwind.d: Likewise.

2005-03-04  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/ldstla-{n32.s, n32.d, n32-shared.d}: Delete.
	* gas/mips/ldstla-{n64.d, n64-shared.d}: Adjust expected output
	for loads and stores from constant addresses.
	* gas/mips/ldstla-{sym32.s, eabi64.d, n64-sym32.d}: New tests.
	* gas/mips/mips.exp: Run them.

2005-03-03  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/mips.exp: Move tls tests to main $elf block.

2005-03-03  Nick Clifton  <nickc@redhat.com>

	* gas/macros/macros.exp (and.s): Expect this test to fail for the
	tic4x-coff target because it uses the '&' character as a line
	separator.

	* gas/sh/basic.exp: Add an sh-hms version of the pcrel test.
	* gas/sh/pcrel-hms.d: New file.  Adjusted form of pcrel-coff.d for
	the sh-hms target.
	* gas/sh/arch/arch.exp: Expect the same failures for sh-hms port
	as for the sh-coff port.

	* gas/macros/macros.exp (run_list_test): Also expect the msp430
	port to fail the strings test because it defines
	ONLY_STANDARD_ESCAPES.

	* gas/arm/arch6zk.s: Add three nop instructions in order to pad
	the .text section out to a 32-byte boundary as will automatically
	be done by the arm-aout target.