@@ -47,14 +47,14 @@ Contents of section \.movl:
  0+40 05000000 01000000 00000040 00000060  .*
  0+50 05000000 01000000 00000040 00000060  .*
 Contents of section \.data8:
- 0+00 60000000 00000000 00000000 00000000  .*
+ 0+00 [06]0000000 000000[06]0 00000000 00000000  .*
  0+10 00000000 00000000 00000000 00000000  .*
  0+20 00000000 00000000 00000000 00000000  .*
  0+30 00000000 00000000 00000000 00000000  .*
  0+40 00000000 00000000 00000000 00000000  .*
  0+50 00000000 00000000 00000000 00000000  .*
 Contents of section \.data4:
- 0+00 60000000 00000000 00000000 00000000  .*
+ 0+00 [06]00000[06]0 00000000 00000000 00000000  .*
  0+10 00000000 00000000 00000000 00000000  .*
  0+20 00000000 00000000 00000000 00000000  .*
  0+30 00000000 00000000 00000000 00000000  .*
